<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/createUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/create_username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/createUsernameText"
        app:layout_constraintStart_toStartOf="@id/createUsernameText"
        app:layout_constraintTop_toBottomOf="@id/createUsernameText" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
